--- a/styles2.css
+++ b/styles2.css
@@ -27,8 +27,8 @@
 }
 
 body {
- background-color: #545657;
  padding: 0px 25%;
+ background: linear-gradient(#71B280, #134E5E);
 }
 
 @media (max-width: 700px) {
@@ -72,4 +72,14 @@ body {
     100% {
         background-position: 1800px 2000px, 1600px 1600px, 1400px 1200px;
     }
+}
+
+
+
+
+
+
+.container {
+  background-color: #FF8630;
+  padding: 55px 40px;
 }
