--- a/styles3.css
+++ b/styles3.css
@@ -229,3 +229,56 @@
     width: 100%;
     left: 0;
 }
+
+
+
+
+details {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+summary {
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+.buon {
+  display: inline-block;
+  background: #2196f3;
+  color: #fff;
+  padding: 12px;
+  border-radius: 3px;
+  text-decoration: none;
+  font-family: Tahoma;
+  font-size: 18px;
+  line-height: 1;
+  font-weight: 100;
+}
+
+div {
+  margin: 24px;
+  text-align: center;
+}
+
+
+
+
+
+
+.c-button--icon {
+  min-width: initial;
+  text-align: center;
+  padding: 10px 14px;
+}
