--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@ margin-right: 2%;
 
 .divdiv {
 background-color: #000;
-height: 100%;
+height: 500px;
 border-radius: 7px;
 padding: 20px;
 background-color: #333333;
+width: 100%;
 }
 
-img {
+.photo {
 max-width: 100%;
+border-radius: 10px;
 }
