--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,31 @@ margin-right: 25%;
 margin-left: 2%;
 margin-right: 2%;
 }
+
+details {
+border: 1px solid #fff;
+margin-top: 3px;
+margin-bottom: 3px;
+}
+
+summary {
+font-size: 18px;
+color: #fff;
+}
+
+
+
 }
 
 /* --------------------- */
-
-.raz {
-height: 7px;
-}
 
 .divdiv {
 border-radius: 7px;
 padding: 20px;
 background-color: #333333;
 max-width: 100%;
+margin-top: 5px;
+margin-bottom: 5px;
 }
 
 .tddiv {
@@ -58,15 +70,32 @@ border: 3px solid white;
 
 /* --------------------- */
 
-.divdetails {
+details {
 border: 1px solid #fff;
-padding: 5px 0px;
-margin-bottom: 10px;
+margin-top: 3px;
+margin-bottom: 3px;
+border-radius: 7px;
 }
 
-.divsummary {
-font-size: 18px;
+summary {
+font-size: 19px;
 color: #fff;
-padding: 10px;
 padding: 10px 20px;
+}
+
+.text {
+color: #fff;
+font-size: 19px;
+padding-top: 5px;
+padding-bottom: 5px;
+}
+
+.txt {
+color: #fff;
+font-size: 19px;
+padding: 10px;
+}
+
+.hhh {
+color: #fff;
 }
