--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,17 @@ background-color: #333333;
 max-width: 100%;
 margin-top: 5px;
 margin-bottom: 5px;
+border: 2px solid white; /* Белая граница толщиной 2px */
 }
 
 .divdiv2 {
-border-radius: 7px;
-padding: 20px;
-background-color: #d50f25;
-max-width: 100%;
-margin-top: 5px;
-margin-bottom: 5px;
+    border-radius: 7px;
+    padding: 20px;
+    background-color: #d50f25;
+    max-width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 2px solid white; /* Белая граница толщиной 2px */
 }
 
 .tddiv {
@@ -62,6 +64,7 @@ max-width: 100%;
 .photo {
 max-width: 100%;
 border-radius: 10px;
+border: 2px solid white; /* Белая граница толщиной 2px */
 }
 
 /* --------------------- */
