--- a/styles.css
+++ b/styles.css
@@ -41,17 +41,15 @@ background-color: #333333;
 max-width: 100%;
 margin-top: 5px;
 margin-bottom: 5px;
-border: 2px solid white; /* Белая граница толщиной 2px */
 }
 
 .divdiv2 {
     border-radius: 7px;
     padding: 20px;
-    background-color: #d50f25;
+    background-color: rgba(213, 15, 37, 0.5); /* Цвет фона с прозрачностью 50% */
     max-width: 100%;
     margin-top: 5px;
     margin-bottom: 5px;
-    border: 2px solid white; /* Белая граница толщиной 2px */
 }
 
 .tddiv {
