--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,14 @@ margin-bottom: 5px;
     margin-bottom: 5px;
 }
 
+.divdiv3 {
+    padding: 10px;
+    background-color: #ffffff;
+    max-width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .tddiv {
 border-radius: 7px;
 padding: 1px;
