--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,11 @@ margin-bottom: 5px;
 }
 
 .divdiv3 {
-    padding: 10px;
-    background-color: #ffffff;
-    max-width: 100%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+padding: 10px;
+background-color: #fff;
+max-width: 100%;
+margin-top: 5px;
+margin-bottom: 5px;
 }
 
 .tddiv {
