--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ color: #fff;
 .divdiv {
 border-radius: 7px;
 padding: 20px;
-background-color: #333333;
+background-color: rgba(51, 51, 51, 0.5); /* Цвет фона #333333 с прозрачностью 50% */
 max-width: 100%;
 margin-top: 5px;
 margin-bottom: 5px;
@@ -54,7 +54,7 @@ margin-bottom: 5px;
 
 .divdiv3 {
 padding: 10px;
-background-color: #fff;
+background-color: rgba(255, 255, 255, 0.5); /* Белый цвет фона с прозрачностью 50% */
 max-width: 100%;
 margin-top: 5px;
 margin-bottom: 5px;
