--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,13 @@ body {
     margin-bottom: 10px;
 }
 
+.divmenu {
+    padding: 7px 7px;
+    background-color: #191919;
+    max-width: 100%;
+    margin-bottom: 10px;
+}
+
 details {
     border: 1px solid #fff;
     margin-bottom: 10px;
@@ -66,18 +73,28 @@ p {
 
 h2 {
     color: #fff;
+    font-family: Arial, sans-serif;
 }
 
-.colorful-block {
+.quote-green {
   background-color: #a9f16c; /* Цвет фона блока */
   color: black; /* Цвет текста */
   padding: 10px; /* Внутренние отступы */
   border-left: 7px solid #67e300; /* Цвет темной полосы слева */
 }
 
-.square-button {
-    padding: 10px 20px;
-    background-color: lightgrey;
-    color: #232323;
-    border: 2px solid grey;
+.a-button-white {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 20px;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s; /* добавляем плавное изменение цвета фона */
+}
+
+.a-button-white:hover {
+  background-color: #e3e3e3; /* изменяем цвет фона при наведении */
+}
+
+.a-button-white:active {
+  background-color: #cccccc; /* изменяем цвет фона при нажатии */
 }
