--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,8 @@ body {
 
 .divdiv {
     padding: 20px;
-    background-color: #232323;
+    background-color: #fff;
     max-width: 100%;
-    margin-bottom: 10px;
-}
-
-.divdiv2 {
-    padding: 20px;
-    background-color: rgba(51, 51, 51, 0.5); /* Цвет фона #333333 с прозрачностью 50% */
-    max-width: 100%;
-    border-radius: 7px;
     margin-bottom: 10px;
 }
 
@@ -39,30 +31,30 @@ body {
 }
 
 details {
-    border: 1px solid #fff;
+    border: 1px solid #000;
     margin-bottom: 10px;
 }
 
 summary {
     font-size: 19px;
-    color: #fff;
+    color: #000;
     padding: 10px 20px;
 }
 
 p {
-    color: #fff;
+    color: #000;
     font-size: 19px;
     margin-bottom: 10px;
 }
 
 h2 {
-    color: #fff;
+    color: #000;
     font-family: Arial, sans-serif;
 }
 
 .quote-green {
   background-color: #a9f16c; /* Цвет фона блока */
-  color: black; /* Цвет текста */
+  color: #000; /* Цвет текста */
   padding: 10px; /* Внутренние отступы */
   border-left: 7px solid #67e300; /* Цвет темной полосы слева */
 }
