--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,12 @@
 body {
-    background-image: url('1614638125_32-p-kosmicheskii-fon-dlya-fotoshopa-49.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #232323; /* Цвет фона, который будет виден между кадрами GIF */
+    background-color: #65a6d1;
     padding-left: 25%;
     padding-right: 25%;
 }
 
 @media (max-width: 768px) {
     body {
-        background-image: url('1614638125_32-p-kosmicheskii-fon-dlya-fotoshopa-49.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-color: #232323; /* Цвет фона, который будет виден между кадрами GIF */
-        padding-left: 1%;
-        padding-right: 1%;
+        background-color: #65a6d1;
     }
 }
 
@@ -22,42 +14,34 @@ body {
     padding: 20px;
     background-color: #fff;
     max-width: 100%;
-    margin-bottom: 10px;
+}
+
+.transparent {
+    max-width: 100%;
+    margin-bottom: 6px;
 }
 
 .photo {
     max-width: 100%;
-    margin-bottom: 10px;
-    border: 1px solid #000; /* Серая граница толщиной 1 пиксель */
 }
 
-details {
-    border: 1px solid #000;
-    margin-bottom: 10px;
-}
-
-summary {
-    font-size: 19px;
-    color: #000;
-    padding: 10px 20px;
-}
-
-p {
+.p-p {
     color: #000;
     font-size: 19px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 h2 {
     color: #000;
     font-family: Arial, sans-serif;
+    margin-bottom: 6px;
 }
 
 .quote-green {
   background-color: #a9f16c; /* Цвет фона блока */
   color: #000; /* Цвет текста */
   padding: 10px; /* Внутренние отступы */
-  border-left: 7px solid #67e300; /* Цвет темной полосы слева */
+  border-left: 6px solid #67e300; /* Цвет темной полосы слева */
 }
 
 .a-button-white {
@@ -79,5 +63,5 @@ h2 {
 .color-div-blue {
     padding: 20px;
     background-color: rgba(76, 87, 216, 0.5); /* Цвет фона #4C57D8 с прозрачностью 50% */
-    max-width: 100%;
+    max-width: 100%
 }
