--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
 @media (max-width: 768px) {
     body {
         background-color: #65a6d1;
+	padding-left: 0%;
+        padding-right: 0%;
+        padding-top: 0%;
+        padding-bottom: 0%;
     }
 }
 
