--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,23 @@
 body {
     background-color: #65a6d1;
+}
+
+.div-body {
     padding-left: 25%;
     padding-right: 25%;
 }
 
-@media (max-width: 768px) {
-    body {
-        background-color: #65a6d1;
-	padding-left: 0%;
+@media (max-width: 900px) {
+    .div-body {
+        padding-left: 6%;
+        padding-right: 6%;
+    }
+}
+
+@media (max-width: 500px) {
+    .div-body {
+        padding-left: 0%;
         padding-right: 0%;
-        padding-top: 0%;
-        padding-bottom: 0%;
     }
 }
 
