--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 
 .h2-h2 {
     color: #000;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Trebuchet MS, Helvetica, Arial, sans-serif;
     margin: 0 0 10px 0;
 }
 
@@ -55,6 +55,9 @@ body {
   font-size: 19px;
   font-family: Helvetica, Arial, sans-serif;
   margin: 0 0 10px 0;
+
+    display: block;
+    unicode-bidi: isolate;
 }
 
 .a-button-white {
