--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,53 @@
+.rules {
+    margin: 0 0 10px 0;
+    max-width: 100%;
+}
+
+.color-div {
+    background-color: #00aa72;
+    padding: 20px 20px 10px 20px;
+}
+
 body {
-    background-color: #fff;
     padding: 0px;
     margin: 0px;
 }
 
-.div-body {
+.block-article {
     padding-left: 25%;
     padding-right: 25%;
-    margin: 0px;
-}
-
-.divdiv {
-    padding: 20px 0px 10px 0px;
     background-color: #fff;
-    max-width: 100%;
 }
 
 @media (max-width: 900px) {
-    .div-body {
-        padding: 0px;
-        margin: 0px;
-    }
-
-.divdiv {
-    padding: 20px 20px 10px 20px;
-    background-color: #fff;
-    max-width: 100%;
+.block-article {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 }
 
 .photo {
-    max-width: 100%;
-    margin: 0 0 10px 0;
-    border-radius: 24px;
     min-width: 300px;
 }
 
-.p-p {
-  color: #000; /* Цвет текста */
-  font-size: 19px;
-  font-family: Helvetica, Arial, sans-serif;
-  margin: 0 0 10px 0;
+.paragraph {
+    color: #000; /* Цвет текста */
+    font-size: 19px;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .h2-h2 {
     color: #000;
     font-family: Trebuchet MS, Helvetica, Arial, sans-serif;
-    margin: 0 0 10px 0;
 }
 
-.quote-green {
-  background-color: #a9f16c; /* Цвет фона блока */
-  color: #000; /* Цвет текста */
+.quote {
   padding: 10px; /* Внутренние отступы */
-  border-left: 10px solid #67e300; /* Цвет темной полосы слева */
+  border-left: 7px solid #000; /* Цвет темной полосы слева */
   font-size: 19px;
   font-family: Helvetica, Arial, sans-serif;
-  margin: 0 0 10px 0;
-  border-radius: 24px;
   box-sizing: border-box;
   min-width: 300px;
-
-    display: block;
-    unicode-bidi: isolate;
 }
 
 .a-button-white {
@@ -71,8 +56,11 @@ body {
   padding: 10px 20px;
   font-family: Helvetica, Arial, sans-serif;
   transition: background-color 0.3s; /* добавляем плавное изменение цвета фона */
-  border-radius: 24px;
-  max-width: 100%;
+  box-sizing: border-box;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .a-button-white:hover {
@@ -83,19 +71,10 @@ body {
   background-color: #cccccc; /* изменяем цвет фона при нажатии */
 }
 
-.color-div-blue {
-    background-color: rgba(76, 87, 216, 0.5); /* Цвет фона #4C57D8 с прозрачностью 50% */
-    max-width: 100%;
-    padding: 10px 10px 0px 10px;
-    border-radius: 24px;
-    box-sizing: border-box;
-    min-width: 300px;
-}
-
 ul {
-  list-style-type: circle;
+  list-style-type: disc;
+  margin: 0;
   color: #000; /* Цвет текста */
   font-size: 19px;
   font-family: Helvetica, Arial, sans-serif;
-  margin: 0 0 10px 0;
 }
