--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,19 @@
 }
 
 .color-div {
-    background-color: #f0e68c;
     padding: 20px 20px 10px 20px;
+}
+
+.color-div-f0e68c {
+    background-color: #f0e68c;
+}
+
+.color-div-f5deb3 {
+    background-color: #f5deb3;
+}
+
+.color-div-f1f1f1 {
+    background-color: #f1f1f1;
 }
 
 body {
@@ -21,13 +32,14 @@ body {
 
 .paragraph {
     color: #000; /* Цвет текста */
-    font-size: 19px;
+    font-size: 17px;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 .heading2 {
     color: #000;
     font-family: Trebuchet MS, Helvetica, Arial, sans-serif;
+    font-size: 20px;
 }
 
 .quote {
@@ -69,16 +81,12 @@ body {
     text-align: center;
 }
 
-.block-404 {
-padding: 20px;
-text-align: center;
-margin: 0;
-background-color: #ace5ee;
-color: #fff;
-font-family: Helvetica, Arial, sans-serif;
-font-size: 19vw;
-display: none;
-width: 100%;
+.display-p {
+    color: #fff;
+    font-size: 10vw;
+    display: none;
+    font-family: Helvetica, Arial, sans-serif;
+    display: none;
 }
 
 /* ---------- РАЗМЕРЫ ЭКРАНА ---------- */
@@ -91,34 +99,18 @@ width: 100%;
     padding-left: 20px;
     padding-right: 20px;
 }
-
-.paragraph {
-    font-size: 18px;
-}
 }
 
 @media (max-width: 700px) {
-.paragraph {
-    font-size: 17px;
-}
 }
 
 @media (max-width: 600px) {
-.paragraph {
-    font-size: 16px;
-}
 }
 
 @media (max-width: 500px) {
-.paragraph {
-    font-size: 15px;
-}
 }
 
 @media (max-width: 400px) {
-.paragraph {
-    font-size: 14px;
-}
 }
 
 @media (max-width: 300px) {
@@ -126,11 +118,11 @@ width: 100%;
     display: none;
 }
 
-.paragraph {
-    font-size: 13px;
+.display-p {
+    display: block;
 }
 
-.block-404 {
-display: block;
+body {
+    background-color: #7fc7ff;
 }
 }
