--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 .miniblock {
 margin: 0 0 10px 0;
 max-width: 100%;
+border-radius: 7px;
 }
 
 .photo {
 margin: 0 0 10px 0;
 max-width: 100%;
+border-radius: 7px;
 }
 
 .color-div {
