--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,15 @@ background-color: #f1f1f1;
   background-position: center;
 }
 
+.pspan-2 {
+  display: inline-block;
+  max-width: 80%; /* Установите желаемую ширину */
+  padding: 20px;
+  border: 1px solid #000;
+  overflow: hidden; /* Скрыть содержимое, которое выходит за границы */
+border-radius: 7px;
+}
+
 /* ------------------------------ */
 
 .position-center {
@@ -83,6 +92,7 @@ font-family: Trebuchet MS, Helvetica, Arial, sans-serif;
 font-size: 20px;
 margin: 0 0 10px 0;
 max-width: 100%;
+position: relative;
 }
 
 .heading {
