--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ background-color: #f5deb3;
 width: 100%;
 max-width: 100%;
 background-color: #f0e68c;
+margin: 0 5px;
 }
 
 /* ------------------------------ */
