--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,14 @@ background-color: #f1f1f1;
 display: flex;
 margin: 0 0 10px 0;
 background-color: #f5deb3;
+padding: 0 2px;
 }
 
 .button-item {
 width: 100%;
 max-width: 100%;
 background-color: #f0e68c;
-margin: 0 5px;
+margin: 0 2px;
 }
 
 /* ------------------------------ */
