--- a/styles.css
+++ b/styles.css
@@ -155,10 +155,6 @@ position: fixed;
 top: 0;
 lrft: 0;
 z-index: 3;
+background-color: #000;
+color: #fff;
 }
-
-/* РАЗМЕРЫ ЭКРАНА =================================== */
-
-
-
-/* ------------------------------- */
