--- a/styles.css
+++ b/styles.css
@@ -111,30 +111,32 @@ text-align: left;
 text-align: right;
 }
 
+/* КНОПКА =================================== */
+
+.a-button {
+  background-color: #ff0000;
+  color: #000;
+  padding: 10px 20px;
+  font-family: Helvetica, Arial, sans-serif;
+  transition: background-color 0.3s; /* добавляем плавное изменение цвета фона */
+  box-sizing: border-box;
+  width: 30%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 10px 0;
+  border-radius: 7px;
+}
+
+.a-button:hover {
+  background-color: #e3e3e3; /* изменяем цвет фона при наведении */
+}
+
+.a-button:active {
+  background-color: #cccccc; /* изменяем цвет фона при нажатии */
+}
+
 /* ======================================================================  */
-
-.a-button-white {
-background-color: #fff;
-color: #000;
-padding: 10px 20px;
-font-family: Helvetica, Arial, sans-serif;
-transition: background-color 0.3s; /* добавляем плавное изменение цвета фона */
-box-sizing: border-box;
-width: 30%;
-display: flex;
-align-items: center;
-justify-content: center;
-display: inline-flex;
-margin: 0px;
-}
-
-.a-button-white:hover {
-background-color: #e3e3e3; /* изменяем цвет фона при наведении */
-}
-
-.a-button-white:active {
-background-color: #cccccc; /* изменяем цвет фона при нажатии */
-}
 
 .block-article-list {
 list-style-type: disc;
@@ -143,13 +145,7 @@ padding-left: 10px;
 margin: 10px 0 0 0;
 }
 
-.plist {
-list-style-type: disc;
-}
-
-.pspan {
-color: #616161;
-}
+/* ======================================================================  */
 
 .bbl {
 position: fixed;
@@ -161,4 +157,11 @@ color: #fff;
 max-width: 100%;
 height: 50px;
 overflow: scroll;
+}
+
+.bbl2 {
+max-width: 100%;
+overflow: scroll;
+margin: 0;
+display: flex;
 }
