--- a/styles.css
+++ b/styles.css
@@ -148,15 +148,15 @@ margin: 10px 0 0 0;
 /* ======================================================================  */
 
 .bbl {
-position: fixed;
-top: 0;
-left: 0;
-z-index: 1;
-background-color: #000;
-color: #fff;
-max-width: 100%;
-height: 50px;
-overflow: scroll;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #000;
+  color: #fff;
+  max-width: 100%;
+  overflow: scroll;
+  margin-top: 0;
 }
 
 .bbl2 {
