--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ padding-left: 25%;
 padding-right: 25%;
 background-color: #fff;
 max-width: 100%;
+position: relative;
 }
 
 /* ВЫНОСКА =================================== */
@@ -148,15 +149,19 @@ margin: 10px 0 0 0;
 /* ======================================================================  */
 
 .bbl {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
   background-color: #000;
   color: #fff;
   max-width: 100%;
   overflow: scroll;
-  margin-top: 0;
+  z-index: 1;
+  position: fixed;
+  top: 0; /* Установите верхнюю границу на 0 */
+  left: 0;
+  right: 0;
+  bottom: 90%; /* Установите нижнюю границу на 50px от верха экрана */
+  background-color: yellow;
+  overflow: auto;
+  margin: 0;
 }
 
 .bbl2 {
